# wf-backend

./: .env.example  .gitignore  Dockerfile  Dockerfile.test  Procfile  RAILWAY_DEPLOYMENT.md  README.md  backend_job_fix.py  check_storage_state.py  cli.py  debug_google_auth.py  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.toml  requirements-full.txt  requirements-minimal.txt  requirements.txt  storage_state.json  test-docker-build.sh  test-fresh-token.py  test-jwt-local.py  test_browser_local.py  test_end_to_end_manual_execution.py  test_session_execution.py  verify_playwright.py
backend/: api.py  cookies.py  decrypt_cookies.py  dependencies.py  execution_history_service.py  logging_broadcast.py  routers.py  routers_control.py  routers_local.py  routers_logs.py  routers_runs.py  routers_visual.py  run_events.py  service.py  service_factory.py  storage_state_api.py  storage_state_manager.py  views.py  visual_streaming.py  websocket_manager.py
backend/rrweb/: __init__.py  event_streamer.py  streamers_manager.py
doc/: BRIDGE_ARCHITECTURE.md  BROSWER_PROFILE_ISSUES.md  CHROME_EXTENSION_VS_BRIDGE.md  CONTROL_CHANNEL_ARCHITECTURE.md  COOKIE_RUNTIME_CONSUMPTION.md  ENHANCED_DATABASE_ENDPOINT_GUIDE.md  RRWEB_ARCHITETCTURE.md  RRWEB_ISSUES_0707.md  RRWEB_RECORD_WITH_BYPASS_CSP.md  SESSION_STATE_IMPLEMENTATION_SUMMARY.md
examples/: example.workflow.json  runner.py
rrweb_demo/: README.md  USAGE.md  config.py  start_demo.py
rrweb_demo/backend/: demo_backend.py
rrweb_demo/docs/: ARCHITECTURE.md
rrweb_demo/frontend/: enhanced_demo_viewer.html
rrweb_demo/tests/: test_rrweb_record_replay_optimized_speed.py
test/: MANUAL_TESTING_GUIDE.md  README.md  cookie-upload-wth-ott.py  test-fresh-token.py  test-jwt-local.py  test_browser_local.py  test_cookies_api.py  test_custom_screensaver.py  test_playwright_setup.py  test_session_execution.py
workflow_use/: __init__.py
workflow_use/analyzer/: __init__.py  transcript_correlator.py
workflow_use/browser/: browser_factory.py  custom_screensaver.py  profile_manager.py  rrweb_config.py  visual_browser.py
workflow_use/builder/: prompts.py  service.py
workflow_use/builder/tests/: build_workflow.py
workflow_use/controller/: service.py  utils.py  views.py
workflow_use/mcp/: service.py
workflow_use/mcp/tests/: test_tools.py
workflow_use/recorder/: recorder.py  service.py  views.py
workflow_use/rrweb/: __init__.py  config.py  recorder.py
workflow_use/schema/: views.py
workflow_use/workflow/: event_processor.py  prompts.py  service.py  views.py
workflow_use/workflow/tests/: run_workflow.py  test_extract.py
